compiler/tests/en/errors/unused_mut.salam
// EXPECT: E069
func main:
    mut age := 50
    println age
end
